Add historical data collection, formatting, visualization scripts, and dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,9 @@ data/exports/*
 # Logs
 logs/*.log
 !logs/.gitkeep
+
+# Development notes
+notes/
+
+# Historical data (can be large)
+data/historical/
