--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,14 @@ data/exports/*
 !data/processed/.gitkeep
 !data/exports/.gitkeep
 
+# Google API credentials (never commit these!)
+service_account.json
+credentials.json
+token.json
+**/service_account.json
+**/credentials.json
+**/token.json
+
 # Logs
 logs/*.log
 !logs/.gitkeep
@@ -174,3 +182,8 @@ notes/
 
 # Historical data (can be large)
 data/historical/
+
+# RBA historical data imports
+data/rba_forex_data.db
+data/rba_forex_data.db-journal
+data/rba_downloads/
