--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@
 
 # Data manipulation and analysis
 pandas>=2.0.0
-numpy>=1.24.0
 
 # API requests
 requests>=2.31.0
@@ -11,21 +10,10 @@ requests>=2.31.0
 # Date/time handling
 python-dateutil>=2.8.2
 
-# Data storage (optional - for database)
-# sqlite3 comes with Python, but you might want:
-# sqlalchemy>=2.0.0  # For database ORM
+# Timezone handling
+pytz>=2023.3
 
-# Data visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-
-# Environment variables (for API keys)
-python-dotenv>=1.0.0
-
-# Web framework for dashboard
-flask>=3.0.0
-
-# Jupyter notebook support (optional)
-# jupyter>=1.0.0
-# notebook>=6.5.0
+# Excel file reading (for RBA historical data)
+openpyxl>=3.1.0
+xlrd>=2.0.1  # Required for reading .xls files (Excel 97-2003 format)
 
