Reorganize forex data into HTML/JPEG subdirectories and update templates

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ pytz>=2023.3
 openpyxl>=3.1.0
 xlrd>=2.0.1  # Required for reading .xls files (Excel 97-2003 format)
 
+# HTML to image conversion
+playwright>=1.40.0
+
