--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -20,29 +20,15 @@ jobs:
       with:
         python-version: '3.12'
     
-    - name: Install system dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          libnss3 \
-          libatk1.0-0 \
-          libatk-bridge2.0-0 \
-          libcups2 \
-          libdrm2 \
-          libxkbcommon0 \
-          libxcomposite1 \
-          libxdamage1 \
-          libxfixes3 \
-          libxrandr2 \
-          libgbm1 \
-          libasound2
-    
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    - name: Install Playwright browsers and dependencies
+      run: |
         playwright install chromium
-        playwright install-deps chromium
+        playwright install --with-deps chromium
     
     - name: Collect Commodity Data
       run: |
