Update workflow and regenerate commodity outputs for 2026-01-16

--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -10,14 +10,10 @@ on:
 jobs:
   collect_data:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -56,4 +52,6 @@ jobs:
         git add data/forex_data/processed/currency_daily.csv || true
         git add data/commodities_data/processed/commodity_daily.csv || true
         git diff --staged --quiet || git commit -m "Auto-update: Daily data collection $(date +'%Y-%m-%d %H:%M:%S UTC')"
-        git push origin HEAD:main
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
